example/lib/src/generated/errors/errors_localization_kk.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Kazakh (`kk`).
class ErrorsLocalizationKk extends ErrorsLocalization {
  ErrorsLocalizationKk([String locale = 'kk']) : super(locale);

  @override
  String get error => 'Қате орын алды';

  @override
  String get unexpectedError => 'Күтпеген қате орын алды';

  @override
  String get bugReportSentText => 'Баг туралы есеп сәтті жіберілді.';
}
